syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "grpc-demo-server/pb";

message Host {
    string id = 1;
    string name = 2;
    float ram = 3;
    int64 cores = 4;
    int64 threads = 5;
    google.protobuf.Timestamp updated = 6;
    int64 ready = 7;
    string job_url = 8;
    string token = 9;
    string gpu = 10;
}

message CreateHostRequest {
    string name = 1;
    float ram = 2;
    int64 cores = 3;
    int64 threads = 4;
    int64 ready = 5;
    string job_url = 6;
    string token = 7;
    string gpu = 8;
}
message CreateHostResponse {
  Host host = 1;
}