syntax = "proto3";

import "hello_world.proto";
import "hosts.proto";
import "gpu_models.proto";

option go_package = "grpc-demo-server/pb";

package pb;

service GrpcDemo {
    rpc GetMessage(GetMessageRequest) returns (GetMessageResponse) {}
    rpc CreateHost(CreateHostRequest) returns (CreateHostResponse) {}
    rpc CreateGpuModel(CreateGpuModelRequest) returns (CreateGpuModelResponse) {}
    rpc UpdateGpuModel(UpdateGpuModelRequest) returns (UpdateGpuModelResponse) {}
    rpc GetGpuModel(GetGpuModelRequest) returns (GetGpuModelResponse) {}
    rpc GetGpuModels(GetGpuModelsRequest) returns (GetGpuModelsResponse) {}
}